# PQC_Messaging_App

./: CMakeLists.txt  Makefile  README.md  beast_ws_transport.cpp  beast_ws_transport.h  client.cpp  client.id  connection_engine.cpp  connection_engine.h  crypto.h  envelope.proto  handshake.proto  hkdf.cpp  hkdf.h  identity.cpp  identity.h  kem_kyber.cpp  kem_kyber.h  messages.proto  pins.txt  protocol.h  relay_cli.cpp  relay_server.cpp  server.cpp  server.id  session.h  tcp_transport.cpp  tcp_transport.h  transport.h  ws_transport.cpp  ws_transport.h
deploy/: Caddyfile  relay_server.service
gui/: EngineWorker.cpp  EngineWorker.h  MainWindow.cpp  MainWindow.h  main.cpp
scripts/: build.sh  install_deps_macos.sh  install_deps_ubuntu.sh
tools/: engine_loopback_test.cpp
